# LiteJit

./: .gitignore  CMakeLists.txt  LICENSE
cmake/: cmake_clear.cmake.in
doc/: Doxyfile
include/ljit/: apply.h  arch.h  block.h  bytecode-def.h  bytecode-list.h  bytecode.h  codegen.h  compile.h  defs.h  elf.h  function.h  instance.h  label.h  ljit.h  typedef.h  types.h  x86-arch.h
include/ljit/core/: arch.h  block.h  bytecode-list.h  bytecode.h  codegen.h  defs.h  function.h  label.h  typedef.h  types.h  x86-arch.h
include/ljit/elf/: elf-debug.h  elf-defs.h  elf-header.h  elf-section.h  elf-write.h
src/core/: apply.c  arch.c  arch.h  block.c  bytecode-def.h  bytecode-dumper.c  bytecode-list.c  bytecode-list.h  bytecode.c  bytecode.h  codegen.c  color-stack.c  color-stack.h  color.c  color.h  compile.c  flow-graph.c  flow-graph.h  function.c  function.h  instance-def.h  instance.c  instance.h  interference.c  interference.h  internal.c  internal.h  label.c  liveness-utils.c  liveness-utils.h  liveness.c  liveness.h  regalloc.c  regalloc.h  types.c  types.h  value.h  x86-arch.c  x86-code.inc.in
src/elf/: debug.c  elf.c  header.c  section.c  write.c
test/: CMakeLists.txt  basic-function.c  basic-regalloc.c  elf.c  instance.c  jump.c  ljit-call-function.c
tool/: CMakeLists.txt  codegen-lexer.l  codegen-parser.y
